# c_data_structures

./: .gitignore  CMakeLists.txt  README.md  Runner.java  array_of_structs.c  arrays_as_parameters.c  bitwise_operations.c  functions.c  functions_parameters_passing.c  pass_by_reference.cpp  pointer_to_structure.c  pointers.c  rectangle.cpp  rectangle_template.cpp  struct_and_functions.c
arrays/: 2d_arrays.c  declaration.c  resizing_an_array.c
linked-list/: doubly_linked_list_with_tail.c  doubly_linked_list_with_tail.cpp  linked_list.c  linked_list.cpp  linked_list.java
linked-list/java/doubly_linked_list/: doubly_linked_list.java  doubly_node.java
linked-list/java/doubly_linked_list_with_tail/: doubly_linked_list.java
linked-list/java/singly_linked_list.java/: linked_list.java  node.java
linked_list/: doubly_linked_list.c  doubly_linked_list.cpp
linked_list/java/doubly_linked_list/: DoublyLinkedList.java  DoublyLinkedListMain.java  DoublyLinkedListNode.java
linked_list/java/doubly_linked_list_with_tail/: DoublyLinkedListWithTail.java  DoublyLinkedListWithTailMain.java
linked_list/java/singly_linked_list/: SinglyLinkedList.java  SinglyLinkedListMain.java  SinglyLinkedListNode.java
queue/: doubly_linked_list.h  doubly_linked_list.hh  queue_using_array.c  queue_using_array.cpp  queue_using_list.c  queue_using_list.cpp
queue/java/: DoublyLinkedList.java  Node.java  Queue.java  QueueUsingArray.java  QueueWithArray.java  QueueWithList.java  doubly_linked_list.java  doubly_node.java  queue.java  queue_using_array.java
recursion/: combination_formula.c  factorial.c  fibonacci.c  power.c  sum.c  taylor.c  taylor_horner_role.c
stack/: linked_list.h  linked_list.hh  stack.c  stack.cpp  stack_using_array.c  stack_using_array.cpp
stack/java/singly_linked_list.java/: linked_list.java  node.java  stack.java  stack_using_list.java
strings/: compare_strings.c  count_number_of_words.c  find_duplicates_using_bitwise.c  find_duplicates_using_hash_table.c  reverse_string.c  string_is_anagram_using_bitwise.c  string_is_anagram_using_hash_table.c
tree/: binary_tree.c
tree/java/: BinaryTreeNode.java  BinaryTreeNodeMain.java
tree/java/bfs/: BreadthFirstSearch.java  BreadthFirstTraversal.java
tree/java/dfs/traversals/: InorderTraversal.java  PostorderTraversal.java  PreorderTraversal.java
